Handling long paths and new target framework

--- a/app.config
+++ b/app.config
@@ -17,7 +17,7 @@
                 <value>C#</value>
             </setting>
             <setting name="ValidateFile" serializeAs="String">
-                <value />
+                <value/>
             </setting>
             <setting name="ValidateReport" serializeAs="String">
                 <value>False</value>
@@ -29,14 +29,18 @@
                 <value>False</value>
             </setting>
             <setting name="ConverterPath" serializeAs="String">
-                <value />
+                <value/>
             </setting>
             <setting name="Username" serializeAs="String">
-                <value />
+                <value/>
             </setting>
             <setting name="Password" serializeAs="String">
-                <value />
+                <value/>
             </setting>
         </IfcDoc.Properties.Settings>
     </userSettings>
-<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.1"/></startup></configuration>
+  <startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2"/></startup>
+  <runtime>
+    <AppContextSwitchOverrides value="Switch.System.IO.UseLegacyPathHandling=false;Switch.System.IO.BlockLongPaths=false"/>
+  </runtime>
+</configuration>
