Added SPF and IFCXML format
Moved some stuff around from IfcDoc.Program.

Worked on Compiler a bit to give it functionalities to build IfcProjectLibrary.

Compiler would require a re-work as there is now a lot of static stuff in it.

--- a/Formats/IfcDoc.Formats/IfcDoc.Formats.csproj
+++ b/Formats/IfcDoc.Formats/IfcDoc.Formats.csproj
@@ -11,6 +11,9 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\IfcDoc.Schemas\IfcDoc.Schemas\IfcDoc.Schemas.csproj" />
+    <ProjectReference Include="..\..\IfcKit\formats\BuildingSmart.Serialization\BuildingSmart.Serialization.csproj" />
+    <ProjectReference Include="..\..\IfcKit\formats\spf\BuildingSmart.Serialization.Step.csproj" />
+    <ProjectReference Include="..\..\IfcKit\formats\xml\BuildingSmart.Serialization.Xml.csproj" />
   </ItemGroup>
 
   <ItemGroup>
