--- a/IfcKit/formats/BuildingSmart.Serialization.Attributes/BuildingSmart.Serialization.Attributes.csproj
+++ b/IfcKit/formats/BuildingSmart.Serialization.Attributes/BuildingSmart.Serialization.Attributes.csproj
@@ -1,16 +1,17 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="12.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+<Project ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{55CD2497-80A6-49B9-880B-AB0743B7DECA}</ProjectGuid>
+    <ProjectGuid>{45AAD6CE-A573-41E3-8CC2-45F010C7C3C6}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>BuildingSmart.Serialization.Xml</RootNamespace>
-    <AssemblyName>BuildingSmart.Serialization.Xml</AssemblyName>
+    <RootNamespace>BuildingSmart.Serialization.Attributes</RootNamespace>
+    <AssemblyName>BuildingSmart.Serialization.Attributes</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <Deterministic>true</Deterministic>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -31,37 +32,17 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
-    <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
-    <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
+    <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="SchemaIsoXml.cs" />
-    <Compile Include="XmlFolderSerializer.cs" />
-    <Compile Include="XmlSerializer.cs" />
+    <Compile Include="SerializationPropertyAttribute.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\BuildingSmart.Serialization.Attributes\BuildingSmart.Serialization.Attributes.csproj">
-      <Project>{45aad6ce-a573-41e3-8cc2-45f010c7c3c6}</Project>
-      <Name>BuildingSmart.Serialization.Attributes</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\BuildingSmart.Serialization\BuildingSmart.Serialization.csproj">
-      <Project>{36a0328b-1a60-4f07-bc34-4d22a7f65cac}</Project>
-      <Name>BuildingSmart.Serialization</Name>
-    </ProjectReference>
-  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
-  <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
-       Other similar extension points exist, see Microsoft.Common.targets.
-  <Target Name="BeforeBuild">
-  </Target>
-  <Target Name="AfterBuild">
-  </Target>
-  -->
 </Project>
